# Shamsu

./: .gitignore  Project description.md  README.md  SETUP.md
cli/: Cargo.toml  package-lock.json
cli/src/: context.rs  extractor.rs  llm.rs  main.rs  mcp.rs  permissions.rs  skills.rs  storage.rs  ui.rs  workspace.rs
cli/src/commands/: build.rs  chat.rs  config.rs  mod.rs  session.rs  skills.rs  status.rs
gui/: package-lock.json  package.json
gui/src/: App.css  App.tsx  index.css  main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: ActivityBar.tsx  MainArea.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
gui/src/components/chat/: ChatPanel.tsx  CodeBlock.tsx  CookingIndicator.tsx  MessageRow.tsx
gui/src/components/editor/: EditorPane.tsx  TabBar.tsx
gui/src/components/panels/: ChatSessionList.tsx  ExplorerPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx
gui/src/design-system/: chat.css  components.css  index.css  layout.css  reset.css  tokens.css
gui/src/hooks/: useAgent.ts  useServerPoll.ts  useTauri.ts
gui/src/lib/: extractor.ts
gui/src/store/: AppContext.tsx  appStore.ts
llama.cpp/: .gitignore  README.md
to do app/: documentation.md  index.html  script.js  styles.css
